us/stack_w_fleet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: elasticsearch.connme.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: quickstart-es-http
            port:
              number: 9200
  - host: kibana.connme.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
